[gd_scene load_steps=7 format=3 uid="uid://ckkbpf6k8avxc"]

[ext_resource type="Texture2D" uid="uid://bjii07xsf0s1n" path="res://snaketileset.png" id="1_d81d7"]
[ext_resource type="Script" path="res://main.gd" id="1_tlx2k"]
[ext_resource type="PackedScene" uid="uid://bs67lr8hyfs75" path="res://player/player.tscn" id="2_42jss"]
[ext_resource type="PackedScene" uid="uid://cl4dgg6ekehso" path="res://Food/Food.tscn" id="3_kek1c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hocq4"]
texture = ExtResource("1_d81d7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/custom_data_0 = true
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_7ghpj"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_hocq4")

[node name="Main" type="Node2D" node_paths=PackedStringArray("tile_map", "player", "timer")]
script = ExtResource("1_tlx2k")
tile_map = NodePath("TileMap")
player = NodePath("Player")
timer = NodePath("Timer")

[node name="TileMap" type="TileMap" parent="." groups=["Map"]]
tile_set = SubResource("TileSet_7ghpj")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 11, 131072, 0, 720896, 0, 2, 720907, 131072, 2, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 65547, 131072, 1, 131083, 131072, 1, 196619, 131072, 1, 262155, 131072, 1, 327691, 131072, 1, 393227, 131072, 1, 458763, 131072, 1, 524299, 131072, 1, 589835, 131072, 1, 655371, 131072, 1, 655360, 0, 1, 589824, 0, 1, 524288, 0, 1, 458752, 0, 1, 393216, 0, 1, 327680, 0, 1, 262144, 0, 1, 196608, 0, 1, 131072, 0, 1, 65536, 0, 1, 720897, 65536, 2, 720898, 65536, 2, 720899, 65536, 2, 720900, 65536, 2, 720901, 65536, 2, 720902, 65536, 2, 720903, 65536, 2, 720904, 65536, 2, 720905, 65536, 2, 720906, 65536, 2, 655370, 65536, 1, 655369, 65536, 1, 589833, 65536, 1, 524297, 65536, 1, 524296, 65536, 1, 458760, 65536, 1, 458759, 65536, 1, 393223, 65536, 1, 393222, 65536, 1, 327686, 65536, 1, 327685, 65536, 1, 327684, 65536, 1, 262148, 65536, 1, 262147, 65536, 1, 196611, 65536, 1, 196610, 65536, 1, 131074, 65536, 1, 131073, 65536, 1, 65537, 65536, 1, 65538, 65536, 1, 65539, 65536, 1, 65540, 65536, 1, 65541, 65536, 1, 65542, 65536, 1, 65543, 65536, 1, 65544, 65536, 1, 65545, 65536, 1, 65546, 65536, 1, 131082, 65536, 1, 131081, 65536, 1, 131080, 65536, 1, 131079, 65536, 1, 131078, 65536, 1, 131077, 65536, 1, 131076, 65536, 1, 131075, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 524289, 65536, 1, 589825, 65536, 1, 655361, 65536, 1, 655362, 65536, 1, 655363, 65536, 1, 655364, 65536, 1, 655365, 65536, 1, 655366, 65536, 1, 655367, 65536, 1, 655368, 65536, 1, 589834, 65536, 1, 524298, 65536, 1, 458762, 65536, 1, 393226, 65536, 1, 393225, 65536, 1, 327689, 65536, 1, 327690, 65536, 1, 262154, 65536, 1, 196618, 65536, 1, 458761, 65536, 1, 262153, 65536, 1, 196617, 65536, 1, 196616, 65536, 1, 196615, 65536, 1, 196614, 65536, 1, 196613, 65536, 1, 196612, 65536, 1, 262151, 65536, 1, 262152, 65536, 1, 262150, 65536, 1, 327687, 65536, 1, 327688, 65536, 1, 393224, 65536, 1, 262149, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 1, 589826, 65536, 1, 589827, 65536, 1, 589828, 65536, 1, 589829, 65536, 1, 589830, 65536, 1, 589831, 65536, 1, 589832, 65536, 1, 524295, 65536, 1, 524294, 65536, 1, 524293, 65536, 1, 524292, 65536, 1, 458756, 65536, 1, 458755, 65536, 1, 393219, 65536, 1, 327683, 65536, 1, 393220, 65536, 1, 524291, 65536, 1, 458757, 65536, 1, 458758, 65536, 1, 393221, 65536, 1)

[node name="Player" parent="." instance=ExtResource("2_42jss")]
position = Vector2(56, 56)

[node name="Food" parent="." instance=ExtResource("3_kek1c")]
position = Vector2(120, 72)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 24.0
offset_top = 24.0
offset_right = 109.0
offset_bottom = 47.0
text = "Game over"

[connection signal="food_eaten" from="Player" to="." method="add_segment"]
[connection signal="food_eaten" from="Player" to="." method="spawn_food" unbinds=1]
[connection signal="player_died" from="Player" to="." method="on_death"]
[connection signal="timeout" from="Timer" to="." method="move_snake"]
